# MemGuard

./: CMakeLists.txt  LICENCE
.github/workflows/: cmake-build-testrunner.yml  cmake-test-runner.yml
include/: memguard.h
src/: memguard.c
tests/: basic.c
